test/types/records/const-checking/todo-assign-to-record-formal-error.good
todo-assign-to-record-formal-error.chpl:8: In function 'myProc':
todo-assign-to-record-formal-error.chpl:9: error: cannot assign to const variable
todo-assign-to-record-formal-error.chpl:16: error: done
